--- a/index.html
+++ b/index.html
@@ -118,13 +118,22 @@
                 <h2 class="section-h">Чем мы занимаемся</h2>
                 <ul class="list feature">
                     <li class="item">
-                        <img src="./images/work01.jpg" alt="#" width="370">
+                        <div class="feature-img">
+                            <img src="./images/work01.jpg" alt="#" width="370">
+                            <div class="feature-text">Десктопные приложения</div>
+                        </div>
                     </li>
                     <li class="item">
-                        <img src="./images/work02.jpg" alt="#" width="370">
+                        <div class="feature-img">
+                            <img src="./images/work02.jpg" alt="#" class="feature-img" width="370">
+                            <div class="feature-text">Мобильные приложения</div>
+                        </div>
                     </li>
                     <li class="item">
-                        <img src="./images/work03.jpg" alt="#" width="370">
+                        <div class="feature-img">
+                            <img src="./images/work03.jpg" alt="#" width="370">
+                            <div class="feature-text">Дизайнерские решения</div>
+                        </div>
                     </li>
                 </ul>
             </div>
