--- a/portfolio.html
+++ b/portfolio.html
@@ -65,18 +65,31 @@
             <div class="container">
                 <ul class="list portfolio-list">
                     <li class="item">
-                        <a href="" class="link">
-                            <img src="./images/technokryak.jpg" alt="" class="portfolio-img">
-                            <div class="portfolio-description">
-                                <h2 class="portfolio-name">Технокряк</h2>
-                                <p class="portfolio-lable">Веб-сайт</p>
-                            </div>
-                        </a>
-                    
+                        <div class="card-shadow">
+                            <a href="" class="link">
+                                <div class="card">
+                                    <img src="./images/technokryak.jpg" alt="" class="portfolio-img">
+                                    <div class="card-hover">
+                                        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                        Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                    </div>
+                                </div>
+                                <div class="portfolio-description">
+                                    <h2 class="portfolio-name">Технокряк</h2>
+                                    <p class="portfolio-lable">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </div>
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/poster.jpg" alt="" class="portfolio-img">
+                            <div class="card">
+                                <img src="./images/poster.jpg" alt="" class="portfolio-img">
+                                <div class="card-hover">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                </div>
+                            </div>
                             <div class="portfolio-description">
                                 <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
                             <p class="portfolio-lable">Дизайн</p>
@@ -86,7 +99,13 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/seafood.jpg" alt="" class="portfolio-img">
+                            <div class="card">
+                                <img src="./images/seafood.jpg" alt="" class="portfolio-img">
+                                <div class="card-hover">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                </div>
+                            </div>
                             <div class="portfolio-description">
                                 <h2 class="portfolio-name">Ресторан Seafood</h2>
                                 <p class="portfolio-lable">Приложение</p>
@@ -96,7 +115,13 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/prime.jpg" alt="" class="portfolio-img">
+                            <div class="card">
+                                <img src="./images/prime.jpg" alt="" class="portfolio-img">
+                                <div class="card-hover">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                </div>
+                            </div>
                             <div class="portfolio-description">
                                 <h2 class="portfolio-name">Проект Prime</h2>
                                 <p class="portfolio-lable">Маркетинг</p>
@@ -106,7 +131,13 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/boxes.jpg" alt="" class="portfolio-img">
+                            <div class="card">
+                                <img src="./images/boxes.jpg" alt="" class="portfolio-img">
+                                <div class="card-hover">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                </div>
+                            </div>
                             <div class="portfolio-description">
                                 <h2 class="portfolio-name">Проект Boxes</h2>
                                 <p class="portfolio-lable">Приложение</p>
@@ -116,7 +147,13 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/inspiration-has-no-borders.jpg" alt="" class="portfolio-img">
+                            <div class="card">
+                                <img src="./images/inspiration-has-no-borders.jpg" alt="" class="portfolio-img">
+                                <div class="card-hover">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                </div>
+                            </div>
                             <div class="portfolio-description">
                                 <h2 class="portfolio-name">Inspiration has no Borders</h2>
                                 <p class="portfolio-lable">Веб-сайт</p>
@@ -126,7 +163,13 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/limited-edition.jpg" alt="" class="portfolio-img">
+                            <div class="card">
+                                <img src="./images/limited-edition.jpg" alt="" class="portfolio-img">
+                                <div class="card-hover">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                </div>
+                            </div>
                             <div class="portfolio-description">
                                 <h2 class="portfolio-name">Издание Limited Edition</h2>
                                 <p class="portfolio-lable">Дизайн</p>
@@ -136,7 +179,13 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/lab.jpg" alt="" class="portfolio-img">
+                            <div class="card">
+                                <img src="./images/lab.jpg" alt="" class="portfolio-img">
+                                <div class="card-hover">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                </div>
+                            </div>
                             <div class="portfolio-description">
                                 <h2 class="portfolio-name">Проект LAB</h2>
                                 <p class="portfolio-lable">Маркетинг</p>
@@ -146,7 +195,13 @@
                     </li>
                     <li class="item">
                         <a href="" class="link">
-                            <img src="./images/growing-business.jpg" alt="" class="portfolio-img">
+                            <div class="card">
+                                <img src="./images/growing-business.jpg" alt="" class="portfolio-img">
+                                <div class="card-hover">
+                                    Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. 
+                                    Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                                </div>
+                            </div>
                             <div class="portfolio-description">
                                 <h2 class="portfolio-name">Growing Business</h2>
                                 <p class="portfolio-lable">Приложение</p>
