--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,10 @@
         <nav>
             <ul class="nav list">
                 <li class="item">
-                    <a href="./index.html" class="active-link link">Студия</a>
+                    <a href="./index.html" class="link">Студия</a>
                 </li>
                 <li class="item">
-                    <a href="./portfolio.html" class="link">Портфолио</a>
+                    <a href="./portfolio.html" class="active-link link">Портфолио</a>
                 </li>
                 <li class="item">
                     <a href="#" class="link">Контакты</a>
