--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
         </section>
 
-        <!-- Нана команда -->
+        <!-- Наша команда -->
         <section class="team-section section">
             <div class="container team-container">
                 <h2 class="section-h">Наша команда</h2>
@@ -152,37 +152,29 @@
                             <ul class="list team-icon-list">
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
-                                        </svg>    
-                                        </div>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
-                                        </svg>    
-                                        </div>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
-                                        </svg>    
-                                        </div>
+                                        </svg>
                                     </a>
                                     <li class="item-snet">
                                         <a href="" class="team-icon-a">
-                                            <div class="team-icon-link">
                                             <svg class="team-icon">
                                                 <use href="./images/sprite.svg#icon-linkedin"></use>
-                                            </svg>    
-                                            </div>
+                                            </svg> 
                                         </a>
                                     </li>
                                 </li>
@@ -197,37 +189,29 @@
                             <ul class="list team-icon-list">
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
-                                        </svg>    
-                                        </div>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
-                                        </svg>    
-                                        </div>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
-                                        </svg>    
-                                        </div>
+                                        </svg>
                                     </a>
                                     <li class="item-snet">
                                         <a href="" class="team-icon-a">
-                                            <div class="team-icon-link">
                                             <svg class="team-icon">
                                                 <use href="./images/sprite.svg#icon-linkedin"></use>
-                                            </svg>    
-                                            </div>
+                                            </svg> 
                                         </a>
                                     </li>
                                 </li>
@@ -242,37 +226,29 @@
                             <ul class="list team-icon-list">
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-instagram"></use>
-                                        </svg>    
-                                        </div>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-twitter"></use>
-                                        </svg>    
-                                        </div>
+                                        </svg>
                                     </a>
                                 </li>
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                         <svg class="team-icon">
                                             <use href="./images/sprite.svg#icon-facebook"></use>
-                                        </svg>    
-                                        </div>
+                                        </svg>
                                     </a>
                                     <li class="item-snet">
                                         <a href="" class="team-icon-a">
-                                            <div class="team-icon-link">
                                             <svg class="team-icon">
                                                 <use href="./images/sprite.svg#icon-linkedin"></use>
-                                            </svg>    
-                                            </div>
+                                            </svg> 
                                         </a>
                                     </li>
                                 </li>
@@ -287,38 +263,31 @@
                             <ul class="list team-icon-list">
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                             <svg class="team-icon">
                                                 <use href="./images/sprite.svg#icon-instagram"></use>
                                             </svg>
-                                        </div>
                                     </a>
                                 </li>
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                             <svg class="team-icon">
                                                 <use href="./images/sprite.svg#icon-twitter"></use>
                                             </svg>
-                                        </div>
                                         
                                     </a>
                                 </li>
                                 <li class="item-snet">
                                     <a href="" class="team-icon-a">
-                                        <div class="team-icon-link">
                                             <svg class="team-icon">
                                                 <use href="./images/sprite.svg#icon-facebook"></use>
                                             </svg>
-                                        </div>
                                     </a>
                                     <li class="item-snet">
                                         <a href="" class="team-icon-a">
-                                            <div class="team-icon-link">
+
                                             <svg class="team-icon">
                                                 <use href="./images/sprite.svg#icon-linkedin"></use>
-                                            </svg>    
-                                            </div>
+                                            </svg>
                                         </a>
                                     </li>
                                 </li>
@@ -401,37 +370,29 @@
                 <ul class="list social-footer-icon-list">
                     <li class="item-snet">
                         <a href="" class="social-footer-icon-a">
-                            <div class="social-footer-icon-div">
                             <svg class="social-footer-icon">
                                 <use href="./images/sprite.svg#icon-instagram"></use>
-                            </svg>    
-                            </div>
+                            </svg>
                         </a>
                     </li>
                     <li class="item-snet">
                         <a href="" class="social-footer-icon-a">
-                            <div class="social-footer-icon-div">
                             <svg class="social-footer-icon">
                                 <use href="./images/sprite.svg#icon-twitter"></use>
-                            </svg>    
-                            </div>
+                            </svg>
                         </a>
                     </li>
                     <li class="item-snet">
                         <a href="" class="social-footer-icon-a">
-                            <div class="social-footer-icon-div">
                             <svg class="social-footer-icon">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
-                            </svg>    
-                            </div>
+                            </svg>
                         </a>
                         <li class="item-snet">
                             <a href="" class="social-footer-icon-a">
-                                <div class="social-footer-icon-div">
                                 <svg class="social-footer-icon">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
-                                </svg>    
-                                </div>
+                                </svg> 
                             </a>
                         </li>
                     </li>
