--- a/portfolio.html
+++ b/portfolio.html
@@ -223,6 +223,7 @@
         
     </main>
 
+    <!-- Футер -->
     <footer class="footer-section">
         <div class="container footer-content">
             <div class="contacts-footer">
@@ -242,37 +243,29 @@
                 <ul class="list social-footer-icon-list">
                     <li class="item-snet">
                         <a href="" class="social-footer-icon-a">
-                            <div class="social-footer-icon-div">
                             <svg class="social-footer-icon">
                                 <use href="./images/sprite.svg#icon-instagram"></use>
-                            </svg>    
-                            </div>
+                            </svg>
                         </a>
                     </li>
                     <li class="item-snet">
                         <a href="" class="social-footer-icon-a">
-                            <div class="social-footer-icon-div">
                             <svg class="social-footer-icon">
                                 <use href="./images/sprite.svg#icon-twitter"></use>
-                            </svg>    
-                            </div>
+                            </svg>
                         </a>
                     </li>
                     <li class="item-snet">
                         <a href="" class="social-footer-icon-a">
-                            <div class="social-footer-icon-div">
                             <svg class="social-footer-icon">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
-                            </svg>    
-                            </div>
+                            </svg>
                         </a>
                         <li class="item-snet">
                             <a href="" class="social-footer-icon-a">
-                                <div class="social-footer-icon-div">
                                 <svg class="social-footer-icon">
                                     <use href="./images/sprite.svg#icon-linkedin"></use>
-                                </svg>    
-                                </div>
+                                </svg> 
                             </a>
                         </li>
                     </li>
